Hotfix: NOT_PROVIDED account flags as list